--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ img {
 }
 table {
     margin: 0 auto;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-radius: 10px;
     width: 49vw;
     height: 23vw;
@@ -114,4 +114,24 @@ table {
     cursor: pointer;
 }
 
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
+.rating > span {
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
+}
+
+/*.rating > span:before,*/
+/*.rating > span ~ span:before  {*/
+    /*content: "\2605";*/
+    /*position: absolute;*/
+/*}*/
 
