--- a/public/style.css
+++ b/public/style.css
@@ -129,9 +129,33 @@ table {
     position: absolute;
 }
 
-/*.rating > span:before,*/
-/*.rating > span ~ span:before  {*/
-    /*content: "\2605";*/
-    /*position: absolute;*/
+
+
+
+/*.rating {*/
+    /*text-align: center;*/
+    /*perspective: 250px;*/
+    /*position: relative;*/
+    /*!*top: 40%;*!*/
+    /*!*width: 100%;*!*/
+/*}*/
+
+/*.rating span {*/
+    /*cursor: pointer;*/
+    /*font-size: 20px;*/
+    /*padding: 0 10px;*/
+    /*color: #fff;*/
+    /*opacity: .5;*/
+    /*transition: all 150ms;*/
+    /*display: inline-block;*/
+    /*transform: rotateX(45deg);*/
+    /*transform-origin: center bottom;*/
+/*}*/
+
+/*.rating span.hover {*/
+    /*color: #ff0;*/
+    /*opacity: 1;*/
+    /*transform: rotateX(0deg);*/
+    /*text-shadow: 0 0 30px #ffc;*/
 /*}*/
 
